Spacing fixes

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,6 +13,9 @@
     white 60%
   );
 }
+#defaultCanvas0 {
+  border-radius: 20px;
+}
 
 html {
   font-family: system-ui, sans-serif;
